--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.15.5",
     "favicon": "0.0.2",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "logger": "0.0.1",
     "middleware": "^1.0.0",
     "mongodb": "^2.2.33",
@@ -30,6 +31,7 @@
     "serve-favicon": "~2.4.5",
     "session": "^0.1.0",
     "socket.io": "^2.0.4",
+    "socketio-jwt": "^4.5.0",
     "winston": "^2.4.0"
   }
 }
