--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
+    "express-router": "0.0.1",
     "favicon": "0.0.2",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
@@ -28,6 +31,7 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "promise": "^8.0.1",
+    "router": "^1.3.2",
     "serve-favicon": "~2.4.5",
     "session": "^0.1.0",
     "socket.io": "^2.0.4",
