--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "port": 3000,
   "mongoose": {
-    "uri": "mongodb://localhost/examplexpress",
+    "uri": "mongodb://admin:admin@ds245805.mlab.com:45805/examplexpresss",
     "options": {
       "server": {
         "socketOptions": {
